<resources>
    <string name="app_name">Peluquería Requeteguaupos</string>

    <!--Inicio Sesion-->
    <string name="botonIniciarSesion">INICIAR SESIÓN</string>
    <string name="botonRegistrarmeInicioSesion">REGISTRARME</string>


    <!--Registro-->
    <string name="registroRegistro">REGISTRO</string>
    <string name="nombreRegistro">Nombre de usuario</string>
    <string name="telefonoRegistro">Teléfono</string>
    <string name="correoRegistro">Correo electrónico</string>
    <string name="contraseñaRegistro">Contraseña</string>
    <string name="nombreMascotaRegistro">Nombre mascota</string>
    <string name="pesoMascotaRegistro">Peso mascota</string>
    <string name="razaMascotaRegistro">Raza mascota</string>
    <string name="generoMascotaRegistro">Género mascota</string>
    <string name="botonRegistraseRegistro">Registrarme</string>


    <!--Pantalla Principal-->
    <string name="usuario">Información personal</string>
    <string name="precio">Precios</string>
    <string name="horario">Horarios</string>
    <string name="cita">Cita previa</string>
    <string name="recogidaDomicilio">Recogida a domicilio</string>
    <string name="informacion">Sobre nosotros</string>

    <!--Información personal-->
    <string name="InfoPer">INFORMACIÓN PERSONAL</string>
    <string name="infoPerNombre">Nombre de usuario</string>
    <string name="infoPerCorreo">Correo electrónico</string>
    <string name="infoPerTelefono">Teléfono</string>
    <string name="infoPerContrasena">Contraseña</string>
    <string name="infoPerNombreMascota">Nombre de la mascota</string>
    <string name="infoPerPesoMascota">Peso de la mascota</string>
    <string name="infoPerRazaMascota">Raza de la mascota</string>
    <string name="infoPerGeneroMascota">Género de la mascota</string>
    <string name="infoPerVerInformacion">Recuperar información personal</string>
    <string name="infoPerVolver">Volver</string>


    <!--Horario-->
    <string name="infoHorario">HORARIO</string>
    <string name="infoHorarioBotonVolver">Volver</string>
    <string name="infoHorarioLunes">LUNES</string>
    <string name="infoHorarioMartes">MARTES</string>
    <string name="infoHorarioMiercoles">MIÉRCOLES</string>
    <string name="infoHorarioJueves">JUEVES</string>
    <string name="infoHorarioViernes">VIERNES</string>
    <string name="infoHorarioSabado">SÁBADO</string>
    <string name="infoHorarioManana">Horario mañana</string>
    <string name="infoHorarioTarde">Horario tarde</string>
    <string name="infoHorarioMananaHora">10:30 - 13:30</string>
    <string name="infoHorarioTardeHora">17:00 - 20:00</string>
    <string name="infoHorarioMananaHoraSabado">10:30 - 13:00</string>

    <!--Precios-->
    <string name="infoPrecios">TABLA DE PRECIOS</string>
    <string name="infoPreciosBotonVolver">Volver</string>

    <string name="infoPreciosInformacion">Tamaños</string>
    <string name="infoPreciosInformacion1">Perro pequeño - mediano de 1 - 10kg</string>
    <string name="infoPreciosInformacion2">Perro mediano - grande de 10 - 30kg</string>
    <string name="infoPreciosInformacion3">Perro gigante +30kg</string>
    <!--Baño y corte a maquina-->
    <string name="infoPreciosBañoyCorteMaquina">Baño y corte a maquina</string>
    <string name="infoPreciosBañoyCorteMaquina1">Perro pequeño - mediano</string>
    <string name="infoPreciosBañoyCorteMaquina2">15€</string>
    <string name="infoPreciosBañoyCorteMaquina3">Perro mediano - grande</string>
    <string name="infoPreciosBañoyCorteMaquina4">20€</string>
    <string name="infoPreciosBañoyCorteMaquina5">Perro gigante</string>
    <string name="infoPreciosBañoyCorteMaquina6">30€</string>
    <!--Baño y corte a tijera-->
    <string name="infoPrecioBañoyCorteTijera">Baño y corte a tijera</string>
    <string name="infoPrecioBañoyCorteTijera1">Perro pequeño - mediano</string>
    <string name="infoPrecioBañoyCorteTijera2">25€</string>
    <string name="infoPrecioBañoyCorteTijera3">Perro mediano - grande</string>
    <string name="infoPrecioBañoyCorteTijera4">35€</string>
    <string name="infoPrecioBañoyCorteTijera5">Perro gigante</string>
    <string name="infoPrecioBañoyCorteTijera6">40€</string>
    <!--Baño y corte estetico-->
    <string name="infoPrecioBañoyCorteEstetico">Baño y corte estético</string>
    <string name="infoPrecioBañoyCorteEstetico1">Perro pequeño - mediano</string>
    <string name="infoPrecioBañoyCorteEstetico2">20€</string>
    <string name="infoPrecioBañoyCorteEstetico3">Perro mediano - grande</string>
    <string name="infoPrecioBañoyCorteEstetico4">25€</string>
    <string name="infoPrecioBañoyCorteEstetico5">Perro gigante</string>
    <string name="infoPrecioBañoyCorteEstetico6">30€</string>
    <!--Deslanado-->
    <string name="infoPrecioDeslanado">Deslanados</string>
    <string name="infoPrecioDeslanado1">Perro pequeño - mediano</string>
    <string name="infoPrecioDeslanado2">20€</string>
    <string name="infoPrecioDeslanado3">Perro mediano - grande</string>
    <string name="infoPrecioDeslanado4">35€</string>
    <string name="infoPrecioDeslanado5">Perro gigante</string>
    <string name="infoPrecioDeslanado6">45€</string>
    <!--Baño-->
    <string name="infoPrecioBaño">Baño</string>
    <string name="infoPrecioBaño1">Perro pequeño - mediano</string>
    <string name="infoPrecioBaño2">Pelo corto 6€</string>
    <string name="infoPrecioBaño3">Pelo largo 8€</string>
    <string name="infoPrecioBaño4">Perro mediano - grande</string>
    <string name="infoPrecioBaño5">Pelo corto 12€</string>
    <string name="infoPrecioBaño6">Pelo largo 15€</string>
    <string name="infoPrecioBaño7">Perro gigante</string>
    <string name="infoPrecioBaño8">Pelo corto 15€</string>
    <string name="infoPrecioBaño9">Pelo largo 20€</string>
    <string name="infoPrecioBaño10">Extra de 3€ por pelo muy enredado</string>
    <!--Baño Sanitario-->
    <string name="infoPrecioBañoSanitario">Baño sanitario</string>
    <string name="infoPrecioBañoSanitario1">Perro pequeño - mediano</string>
    <string name="infoPrecioBañoSanitario2">Pelo corto 12€</string>
    <string name="infoPrecioBañoSanitario3">Pelo largo 15€</string>
    <string name="infoPrecioBañoSanitario4">Perro mediano - grande</string>
    <string name="infoPrecioBañoSanitario5">Pelo corto 17€</string>
    <string name="infoPrecioBañoSanitario6">Pelo largo 20€</string>
    <string name="infoPrecioBañoSanitario7">Perro gigante</string>
    <string name="infoPrecioBañoSanitario8">Pelo corto 23€</string>
    <string name="infoPrecioBañoSanitario9">Pelo largo 23€</string>
    <string name="infoPrecioBañoSanitario10">Extra de 3€ por pelo muy enredado</string>

    <!--BañoSanitarioyCorte-->
    <string name="infoPrecioBañoSanitarioyCorte">Baño sanitario y corte</string>
    <string name="infoPrecioBañoSanitarioyCorte1">Perro pequeño - mediano</string>
    <string name="infoPrecioBañoSanitarioyCorte2">Pelo corto 14€</string>
    <string name="infoPrecioBañoSanitarioyCorte3">Pelo largo 19€</string>
    <string name="infoPrecioBañoSanitarioyCorte4">Perro mediano - grande</string>
    <string name="infoPrecioBañoSanitarioyCorte5">Pelo corto 23€</string>
    <string name="infoPrecioBañoSanitarioyCorte6">Pelo largo 26€</string>
    <string name="infoPrecioBañoSanitarioyCorte7">Perro gigante</string>
    <string name="infoPrecioBañoSanitarioyCorte8">Pelo corto 26€</string>
    <string name="infoPrecioBañoSanitarioyCorte9">Pelo largo 30€</string>
    <string name="infoPrecioBañoSanitarioyCorte10">Extra de 3€ por pelo muy enredado</string>

    <!--Baño y retoque -->
    <string name="infoPrecioBañoyRetoque">Baño sanitario y corte</string>
    <string name="infoPrecioBañoyRetoque1">Cara, zona plantar y abdominal y genital</string>
    <string name="infoPrecioBañoyRetoque2">12€</string>
    <string name="infoPrecioBañoyRetoque3">Extra de 3€ por pelo muy enredado</string>

    <!--Corte de uñas-->
    <string name="infoPrecioCorteDeUnas">Corte de uñas</string>
    <string name="infoPrecioCorteDeUnas1">No importa el tamaño del perro</string>
    <string name="infoPrecioCorteDeUnas2">2€</string>

    <!--Limpieza de oidos-->
    <string name="infoPrecioLimpiezaOidos">Limpieza de oídos</string>
    <string name="infoPrecioLimpiezaOidos1">No importa el tamaño del perro</string>
    <string name="infoPrecioLimpiezaOidos2">2€</string>

    <!--Recogida a domicilio-->
    <string name="recoDomicilio">RECOGIDA A DOMICILIO</string>
    <string name="recoDomicilio1">¿En qué consiste nuestro servicio de recogida a domicilio?</string>
    <string name="recoDomicilio2">Si no tienes tiempo para llevar a tu mascota a la peluquería, no te preocupes, nosotros la recogemos en tu domicilio, le haremos el servicio deseado y te la acercaremos al domicilio a la hora acordada.</string>
    <string name="recoDomicilio3">Para ello contamos con un vehículo acondicionado para que tu mascota haga el trayecto de la mejor manera posible.</string>

    <string name="recoDomicilio4">¿Quien puede solicitar este servicio?</string>
    <string name="recoDomicilio5">Todas las personas que quieran solicitar este servicio deberán estar en un radio de 25km de distancia del local de Requeteguaupos.</string>

    <string name="recoDomicilio6">¿Cómo solicito este servicio?</string>
    <string name="recoDomicilio7">Debes ponerte en contacto con Requeteguaupos, ya sea por teléfono o por correo electrónico.</string>
    <string name="recoDomicilio9">Deberás indicar los siguientes datos:</string>

    <string name="recoDomicilio10">- Día y hora deseada.</string>
    <string name="recoDomicilio11">- Servicio deseado.</string>
    <string name="recoDomicilio12">- Tamaño y raza de tu mascota.</string>


    <!--EnviarCorreo - Cita Previa-->
    <string name="info1Citas">En este apartado mandaremos un correo electrónico para solicitar una cita previa.</string>
    <string name="info8Citas">Para ello debes introducir los siguientes datos:</string>
    <string name="info2Citas">Nombre.</string>
    <string name="info3Citas">Teléfono.</string>
    <string name="info4Citas">Nombre de tu animal.</string>
    <string name="info5Citas">Peso de la mascota.</string>
    <string name="info6Citas">Raza de la mascota.</string>
    <string name="info7Citas">Y servicio deseado.</string>
    <string name="btnEnviarCitas">Enviar</string>
    <string name="btnVolverCitas">Volver</string>


    <!-- Información requeteguaupos-->
    <string name="infoRequeteguaupos">Información Requeteguaupos</string>
    <string name="infoRequeteguaupos1">EXPERIENCIA</string>
    <string name="infoRequeteguaupos2">Requeteguaupos es un centro con 10 años de experiencia. </string>
    <string name="infoRequeteguaupos3">El compromiso de nuestros trabajadores será dar el mejor de los servicios tanto a sus mascotas como a usted.</string>
    <string name="infoRequeteguaupos4">Pese a nuestra experiencia estamos en continua formación respecto a peluqueria comercial. </string>

    <string name="infoRequeteguaupos5">COMO EN CASA</string>
    <string name="infoRequeteguaupos6">En Requeteguaupos ofrecemos a su perro un ambiente seguro, limpio y divertido para que se sientan como en casa. Dominamos todas las técnicas y tendencias para el arreglo de su perro según su raza.</string>

    <string name="infoRequeteguaupos7">CALIDAD</string>
    <string name="infoRequeteguaupos8">Para Requeteguaupos lo mas importante es satisfacer las necesidadades de nuestros clientes y sus mascotas. Asesoramos a nuestros clientes sobre los cuidados de su perro, así como el cepillado, baño o cosmética necesaria para los diferentes tipos de mantos. </string>

    <string name="infoRequeteguaupos9">Volver</string>


    <string name="infoRequeteguaupos10">UBICACIÓN</string>
    <string name="infoRequeteguaupos11">Las instalaciones de Requeteguaupos se encuentran:</string>
    <string name="infoRequeteguaupos12">Calle Ronda Arco de Ugena, Nº 10, 45200 Illescas, Toledo.</string>



</resources>
