<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    tools:context=".InformacionRequeteguaupos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"

                android:layout_marginTop="10dp"

                android:text="@string/infoRequeteguaupos" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"

                android:background="@drawable/rectangulo_info_horario">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        android:text="@string/infoRequeteguaupos1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:textStyle="bold"

                        android:text="@string/infoRequeteguaupos2" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:textStyle="bold"

                        android:text="@string/infoRequeteguaupos3" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView36"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:textStyle="bold"

                        android:text="@string/infoRequeteguaupos4" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView37"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18dp"
                        android:textStyle="bold"

                        android:text="@string/infoRequeteguaupos5" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView38"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:textStyle="bold"

                        android:text="@string/infoRequeteguaupos6" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18dp"
                        android:textStyle="bold"

                        android:text="@string/infoRequeteguaupos7" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/textView40"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:text="@string/infoRequeteguaupos8"
                        android:textColor="#000000"
                        android:textSize="15dp"

                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView43"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:text="@string/infoRequeteguaupos10"
                        android:textColor="#000000"
                        android:textSize="18dp"

                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView44"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:text="@string/infoRequeteguaupos11"
                        android:textColor="#000000"
                        android:textSize="15dp"

                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView45"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:text="@string/infoRequeteguaupos12"
                        android:textColor="#000000"
                        android:textSize="15dp"

                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/buttonVolverInformacion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/boton_menu2"

                        android:onClick="Volver"
                        android:text="@string/infoRequeteguaupos9"

                        android:textColor="#040404"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView42"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:textStyle="bold"

                        />

                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>