<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    tools:context=".EnviarCorreo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"

                android:text="@string/info1Citas"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"

                android:layout_weight="1"
                android:text="@string/info8Citas"
                android:textAlignment="center"
                android:textColor="#070707"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rectangulo_registro">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView2"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"


                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:text="@string/info2Citas"
                        android:textColor="#000000" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"

                        android:text="@string/info3Citas"
                        android:textColor="#070707" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView10"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"

                        android:text="@string/info4Citas"
                        android:textColor="#020202" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView4"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"

                        android:text="@string/info5Citas"
                        android:textColor="#000000" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView5"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"

                        android:text="@string/info6Citas"
                        android:textColor="#000000" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView13"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"

                        android:text="@string/info7Citas"
                        android:textColor="#050505" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <EditText
                        android:id="@+id/ETinformacion"
                        android:layout_width="356dp"
                        android:layout_height="211dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:background="#D5FFFFFF"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine" />

                </TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnVolver"

                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="7dp"
                        android:layout_weight="1"
                        android:background="@drawable/boton_menu2"

                        android:onClick="volver"
                        android:text="@string/btnVolverCitas"
                        android:textColor="#050505"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnEnviar"

                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="7dp"
                        android:layout_weight="1"
                        android:background="@drawable/boton_menu2"

                        android:onClick="enviarCorreo"
                        android:text="@string/btnEnviarCitas"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </TableLayout>

            <TextView
                android:id="@+id/textView15"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>